saw the irregular classes in the dataset and quantified those- They are 5 types of signs, namely- pedestrian crossing, no parking, no stopping, right turn, u turn

--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -244,18 +237,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "labels=readFile.label\n",
     "ids=readFile.id\n",
-    "for i in range()"
+    "lines=len(readFile)\n",
+    "idList=[]\n",
+    "labelList=[]\n",
+    "for i in range(lines):\n",
+    "    if ids[i] in idList:\n",
+    "        continue\n",
+    "    else:\n",
+    "        idList.append(ids[i])\n",
+    "        labelList.append(labels[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 11, 13, 15]\n",
+      "['Bus', 'Two-Wheeler', 'Auto-Rickshaw', 'Two-Wheeler', 'Car', 'Car', 'Car', 'Two-Wheeler', 'Two-Wheeler', 'Auto-Rickshaw', 'Pedestrian', 'Two-Wheeler']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(idList)\n",
+    "print(labelList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total Number of bounding boxes for each class and total along with occlusion information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file not found 1 1\n",
+      "file not found 3 7\n",
+      "file not found 4 4\n",
+      "file not found 4 5\n",
+      "file not found 4 6\n",
+      "file not found 14 5\n",
+      "file not found 14 6\n",
+      "file not found 14 7\n",
+      "file not found 15 3\n",
+      "file not found 15 4\n",
+      "file not found 15 5\n",
+      "file not found 15 6\n",
+      "file not found 15 7\n",
+      "file not found 16 5\n",
+      "file not found 16 6\n",
+      "file not found 16 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "totalbbox=0\n",
+    "totalPeds=0\n",
+    "totalBus=0\n",
+    "totalTwo=0\n",
+    "totalCar=0\n",
+    "totalTruck=0\n",
+    "totalAuto=0\n",
+    "irrcount=0\n",
+    "allClasses=[]\n",
+    "ijkPedCross=[]\n",
+    "ijkPark=[]\n",
+    "ijkStop=[]\n",
+    "ijkRight=[]\n",
+    "ijkU=[]\n",
+    "for i in range(1,17):\n",
+    "    inpath=path+\"/\"+str(i)\n",
+    "    for j in range(1,8):\n",
+    "        try:\n",
+    "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"\n",
+    "            readFile=pd.read_csv(fullPath)\n",
+    "            totalbbox=totalbbox+len(readFile)\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            for k in range(len(readFile)):\n",
+    "                if(not(readFile.label[k] in allClasses)):\n",
+    "                    allClasses.append(readFile.label[k])\n",
+    "                if(readFile.label[k]=='Pedestrian Crossing'):\n",
+    "                    irrcount=irrcount+1\n",
+    "                    ijkPedCross.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
+    "                if(readFile.label[k]=='No Parking'):\n",
+    "                    irrcount=irrcount+1\n",
+    "                    ijkPark.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
+    "                if(readFile.label[k]=='No Stopping'):\n",
+    "                    irrcount=irrcount+1\n",
+    "                    ijkStop.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
+    "                if(readFile.label[k]=='Right Turn'):\n",
+    "                    irrcount=irrcount+1\n",
+    "                    ijkRight.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
+    "                if(readFile.label[k]=='U-Turn'):\n",
+    "                    irrcount=irrcount+1\n",
+    "                    ijkU.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
+    "        except:\n",
+    "             print(\"file not found\",i,j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "221350\n",
+      "['Car', 'Two-Wheeler', 'Pedestrian', 'Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal', 'Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
+      "245\n",
+      "['5-7-2193', '5-7-2196', '5-7-2200', '5-7-2204', '5-7-2208', '5-7-2211', '5-7-2215', '5-7-2219', '5-7-2223', '5-7-2227', '5-7-2231', '5-7-2235', '5-7-2239', '5-7-2243', '5-7-2247', '5-7-2251', '5-7-2255', '5-7-2259', '5-7-2263', '5-7-2267', '5-7-2271', '5-7-2275', '5-7-2279', '5-7-2283', '5-7-2287', '5-7-2292', '5-7-2296', '5-7-2300', '5-7-2303', '5-7-2307', '5-7-2311', '5-7-2315', '5-7-2321', '5-7-2326', '5-7-2330', '5-7-2336', '5-7-2340', '5-7-2345', '5-7-2350', '5-7-2355', '5-7-2361', '5-7-2365', '5-7-2371', '5-7-2376', '5-7-2380', '5-7-2387', '5-7-2392', '5-7-2395', '5-7-2402', '5-7-2405', '8-7-2073', '8-7-2078', '8-7-2083', '8-7-2088', '8-7-2093', '8-7-2099', '8-7-2105', '8-7-2110', '8-7-2115', '8-7-2118', '8-7-2125']\n",
+      "['6-7-449', '6-7-454', '6-7-459', '6-7-464', '6-7-469', '6-7-474', '6-7-479', '6-7-484', '6-7-489', '6-7-494', '6-7-499', '6-7-504', '6-7-509', '6-7-514', '6-7-519', '6-7-524', '6-7-529', '6-7-534', '6-7-539', '6-7-544', '6-7-549', '6-7-554', '6-7-559', '6-7-564']\n",
+      "['8-7-793', '8-7-797', '8-7-799', '8-7-805', '8-7-806', '8-7-813', '8-7-817', '8-7-821', '8-7-825', '8-7-829', '8-7-832', '8-7-836', '8-7-840', '8-7-842', '8-7-846', '8-7-850', '8-7-854', '8-7-858', '8-7-862', '8-7-867', '8-7-873', '8-7-874', '8-7-878', '8-7-882', '8-7-888', '8-7-893', '8-7-894', '8-7-901', '8-7-902']\n",
+      "['9-7-46', '9-7-52', '9-7-54', '9-7-59', '9-7-64', '9-7-69', '9-7-74', '9-7-79', '9-7-84', '9-7-89', '9-7-94', '9-7-99', '9-7-104', '9-7-109', '9-7-114', '9-7-119', '9-7-125', '9-7-132', '9-7-137', '9-7-143', '9-7-149', '9-7-155', '9-7-165', '9-7-167', '9-7-173', '9-7-179', '9-7-584', '9-7-594', '9-7-601', '9-7-602', '9-7-610', '9-7-615', '9-7-620', '9-7-622', '9-7-629', '9-7-634', '9-7-637', '9-7-642', '9-7-648', '9-7-654', '9-7-660']\n",
+      "['9-7-931', '9-7-934', '9-7-940', '9-7-946', '9-7-952', '9-7-958', '9-7-963', '9-7-968', '9-7-973', '9-7-978', '9-7-983', '9-7-988', '9-7-993', '9-7-998', '9-7-1003', '9-7-1008', '9-7-1013', '9-7-1018', '9-7-1023', '9-7-1029', '9-7-1034', '9-7-1039', '9-7-1044', '9-7-1049', '9-7-1054', '9-7-1059', '9-7-1064', '9-7-1069', '9-7-1075', '9-7-1081', '9-7-1087', '9-7-1096', '9-7-1102', '9-7-1108', '9-7-1114', '9-7-1120', '9-7-1126', '9-7-1132', '9-7-1138', '9-7-1144', '9-7-1150', '9-7-1156', '9-7-1162', '9-7-1169', '9-7-1176', '9-7-1183', '9-7-1190', '9-7-1197', '9-7-1204', '9-7-1211', '9-7-1218', '9-7-1225', '9-7-1233', '9-7-1242', '9-7-1251', '9-7-1260', '9-7-1270', '9-7-1280', '9-7-1285', '9-7-1293', '9-7-1301', '9-7-1309', '9-7-1317', '9-7-1326', '9-7-1335', '9-7-1344', '9-7-1352', '9-7-1360', '9-7-1368', '9-7-1376', '9-7-1384', '9-7-1396', '9-7-1403', '9-7-1411', '9-7-1420', '9-7-1426', '9-7-1432', '9-7-1441', '9-7-1449', '9-7-1457', '9-7-1465', '9-7-1474', '9-7-1484', '9-7-1496', '9-7-1505', '9-7-1511', '9-7-1524', '9-7-1533', '9-7-1543', '9-7-1553']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(totalbbox)\n",
+    "print(allClasses)\n",
+    "print(irrcount)\n",
+    "print(ijkPedCross)\n",
+    "print(ijkPark)\n",
+    "print(ijkStop)\n",
+    "print(ijkRight)\n",
+    "print(ijkU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -273,6 +419,13 @@
     "print(idSet)\n",
     "print(len(idSet))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
