Number of bboxes for each class and number unique pedestrians marked

--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -311,11 +311,21 @@
    "source": [
     "totalbbox=0\n",
     "totalPeds=0\n",
+    "occPeds=0\n",
     "totalBus=0\n",
+    "occBus=0\n",
     "totalTwo=0\n",
+    "occTwo=0\n",
     "totalCar=0\n",
+    "occCar=0\n",
     "totalTruck=0\n",
+    "occTruck=0\n",
     "totalAuto=0\n",
+    "occAuto=0\n",
+    "totalCyclist=0\n",
+    "occCyclist=0\n",
+    "totalAnimal=0\n",
+    "occAnimal=0\n",
     "irrcount=0\n",
     "allClasses=[]\n",
     "ijkPedCross=[]\n",
@@ -323,6 +333,7 @@
     "ijkStop=[]\n",
     "ijkRight=[]\n",
     "ijkU=[]\n",
+    "uniqPeds=0\n",
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
@@ -330,38 +341,58 @@
     "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"\n",
     "            readFile=pd.read_csv(fullPath)\n",
     "            totalbbox=totalbbox+len(readFile)\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "            pedsIDuniq=[]\n",
     "            for k in range(len(readFile)):\n",
+    "                if(readFile.label[k]=='Pedestrian'):\n",
+    "                    totalPeds=totalPeds+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occPeds=occPeds+1\n",
+    "                    if(not(readFile.id[k] in pedsIDuniq)):\n",
+    "                        uniqPeds=uniqPeds+1\n",
+    "                        pedsIDuniq.append(readFile.id[k])\n",
+    "                elif(readFile.label[k]=='Car'):\n",
+    "                    totalCar=totalCar+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occCar=occCar+1\n",
+    "                elif(readFile.label[k]=='Truck'):\n",
+    "                    totalTruck=totalTruck+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occTruck=occTruck+1\n",
+    "                elif(readFile.label[k]=='Bus'):\n",
+    "                    totalBus=totalBus+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occBus=occBus+1\n",
+    "                elif(readFile.label[k]=='Two-Wheeler'):\n",
+    "                    totalTwo=totalTwo+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occTwo=occTwo+1\n",
+    "                elif(readFile.label[k]=='Auto-Rickshaw'):\n",
+    "                    totalAuto=totalAuto+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occAuto=occAuto+1\n",
+    "                if(readFile.label[k]=='Cyclist'):\n",
+    "                    totalCyclist=totalCyclist+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occCyclist=occCyclist+1\n",
+    "                if(readFile.label[k]=='Animal'):\n",
+    "                    totalAnimal=totalAnimal+1\n",
+    "                    if(readFile.isOccluded[k]==1):\n",
+    "                        occAnimal=occAnimal+1\n",
     "                if(not(readFile.label[k] in allClasses)):\n",
     "                    allClasses.append(readFile.label[k])\n",
     "                if(readFile.label[k]=='Pedestrian Crossing'):\n",
     "                    irrcount=irrcount+1\n",
     "                    ijkPedCross.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
-    "                if(readFile.label[k]=='No Parking'):\n",
+    "                elif(readFile.label[k]=='No Parking'):\n",
     "                    irrcount=irrcount+1\n",
     "                    ijkPark.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
-    "                if(readFile.label[k]=='No Stopping'):\n",
+    "                elif(readFile.label[k]=='No Stopping'):\n",
     "                    irrcount=irrcount+1\n",
     "                    ijkStop.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
-    "                if(readFile.label[k]=='Right Turn'):\n",
+    "                elif(readFile.label[k]=='Right Turn'):\n",
     "                    irrcount=irrcount+1\n",
     "                    ijkRight.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
-    "                if(readFile.label[k]=='U-Turn'):\n",
+    "                elif(readFile.label[k]=='U-Turn'):\n",
     "                    irrcount=irrcount+1\n",
     "                    ijkU.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
     "        except:\n",
@@ -370,15 +401,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "221350\n",
-      "['Car', 'Two-Wheeler', 'Pedestrian', 'Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal', 'Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
+      "Total Number of pedestrians 18214\n",
+      "occluded pedestrians 2356\n",
+      "number of unique pedestrians 330\n",
+      "Total Number of cars 127093\n",
+      "occluded cars 30226\n",
+      "Total Number of buses 6708\n",
+      "occluded buses 1940\n",
+      "Total Number of Trucks 9110\n",
+      "occluded Trucks 1736\n",
+      "Total Number of Animals 131\n",
+      "occluded Animals 0\n",
+      "Total Number of Cyclists 3918\n",
+      "occluded Cyclists 743\n",
+      "Total Number of two-wheelers 40362\n",
+      "occluded two-wheelers 4981\n",
+      "Total Number of Auto-Rikshaws 15569\n",
+      "occluded Auto-Rikshaws 2172\n",
+      "totalbbox 221105\n",
+      "Total number of bounding boxes for the 8 class objects 221105\n",
+      "All the classes of data that are present ['Car', 'Two-Wheeler', 'Pedestrian', 'Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal', 'Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
       "245\n",
       "['5-7-2193', '5-7-2196', '5-7-2200', '5-7-2204', '5-7-2208', '5-7-2211', '5-7-2215', '5-7-2219', '5-7-2223', '5-7-2227', '5-7-2231', '5-7-2235', '5-7-2239', '5-7-2243', '5-7-2247', '5-7-2251', '5-7-2255', '5-7-2259', '5-7-2263', '5-7-2267', '5-7-2271', '5-7-2275', '5-7-2279', '5-7-2283', '5-7-2287', '5-7-2292', '5-7-2296', '5-7-2300', '5-7-2303', '5-7-2307', '5-7-2311', '5-7-2315', '5-7-2321', '5-7-2326', '5-7-2330', '5-7-2336', '5-7-2340', '5-7-2345', '5-7-2350', '5-7-2355', '5-7-2361', '5-7-2365', '5-7-2371', '5-7-2376', '5-7-2380', '5-7-2387', '5-7-2392', '5-7-2395', '5-7-2402', '5-7-2405', '8-7-2073', '8-7-2078', '8-7-2083', '8-7-2088', '8-7-2093', '8-7-2099', '8-7-2105', '8-7-2110', '8-7-2115', '8-7-2118', '8-7-2125']\n",
       "['6-7-449', '6-7-454', '6-7-459', '6-7-464', '6-7-469', '6-7-474', '6-7-479', '6-7-484', '6-7-489', '6-7-494', '6-7-499', '6-7-504', '6-7-509', '6-7-514', '6-7-519', '6-7-524', '6-7-529', '6-7-534', '6-7-539', '6-7-544', '6-7-549', '6-7-554', '6-7-559', '6-7-564']\n",
@@ -389,8 +445,26 @@
     }
    ],
    "source": [
-    "print(totalbbox)\n",
-    "print(allClasses)\n",
+    "print(\"Total Number of pedestrians\", totalPeds )\n",
+    "print(\"occluded pedestrians\",occPeds)\n",
+    "print(\"number of unique pedestrians\",uniqPeds)\n",
+    "print(\"Total Number of cars\", totalCar )\n",
+    "print(\"occluded cars\",occCar)\n",
+    "print(\"Total Number of buses\", totalBus )\n",
+    "print(\"occluded buses\",occBus)\n",
+    "print(\"Total Number of Trucks\", totalTruck )\n",
+    "print(\"occluded Trucks\",occTruck)\n",
+    "print(\"Total Number of Animals\", totalAnimal )\n",
+    "print(\"occluded Animals\",occAnimal)\n",
+    "print(\"Total Number of Cyclists\", totalCyclist )\n",
+    "print(\"occluded Cyclists\",occCyclist)\n",
+    "print(\"Total Number of two-wheelers\", totalTwo )\n",
+    "print(\"occluded two-wheelers\",occTwo)\n",
+    "print(\"Total Number of Auto-Rikshaws\", totalAuto )\n",
+    "print(\"occluded Auto-Rikshaws\",occAuto)\n",
+    "print(\"totalbbox\", totalPeds+totalCar+totalBus+totalTruck+totalCyclist+totalTwo+totalAuto+totalAnimal)\n",
+    "print(\"Total number of bounding boxes for the 8 class objects\", totalbbox-irrcount)\n",
+    "print(\"All the classes of data that are present\",allClasses)\n",
     "print(irrcount)\n",
     "print(ijkPedCross)\n",
     "print(ijkPark)\n",
@@ -401,24 +475,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 11, 13, 15}\n",
-      "12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ids=readFile.id\n",
     "idSet=set(ids)\n",
     "print(idSet)\n",
     "print(len(idSet))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
