Number of bboxes for each class and number unique pedestrians marked

--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -345,6 +345,8 @@
     "            for k in range(len(readFile)):\n",
     "                if(readFile.label[k]=='Pedestrian'):\n",
     "                    totalPeds=totalPeds+1\n",
+    "                    pedWidth.(readFile.x_BR[k]-readFile.x_TL[k])\n",
+    "                    pedHeight.(readFile.y_BR[k]-readFile.y_TL[k])\n",
     "                    if(readFile.isOccluded[k]==1):\n",
     "                        occPeds=occPeds+1\n",
     "                    if(not(readFile.id[k] in pedsIDuniq)):\n",
