--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import matplotlib\n",
     "import os\n",
     "import subprocess"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -333,6 +333,8 @@
     "ijkStop=[]\n",
     "ijkRight=[]\n",
     "ijkU=[]\n",
+    "pedWidth=[]\n",
+    "pedHeight=[]\n",
     "uniqPeds=0\n",
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
@@ -343,10 +345,12 @@
     "            totalbbox=totalbbox+len(readFile)\n",
     "            pedsIDuniq=[]\n",
     "            for k in range(len(readFile)):\n",
+    "                if(not(readFile.label[k] in allClasses)):\n",
+    "                    allClasses.append(readFile.label[k])\n",
     "                if(readFile.label[k]=='Pedestrian'):\n",
     "                    totalPeds=totalPeds+1\n",
-    "                    pedWidth.(readFile.x_BR[k]-readFile.x_TL[k])\n",
-    "                    pedHeight.(readFile.y_BR[k]-readFile.y_TL[k])\n",
+    "                    pedWidth.append(readFile.x_BR[k]-readFile.x_TL[k])\n",
+    "                    pedHeight.append(abs(readFile.y_BR[k]-readFile.y_TL[k]))\n",
     "                    if(readFile.isOccluded[k]==1):\n",
     "                        occPeds=occPeds+1\n",
     "                    if(not(readFile.id[k] in pedsIDuniq)):\n",
@@ -372,17 +376,15 @@
     "                    totalAuto=totalAuto+1\n",
     "                    if(readFile.isOccluded[k]==1):\n",
     "                        occAuto=occAuto+1\n",
-    "                if(readFile.label[k]=='Cyclist'):\n",
+    "                elif(readFile.label[k]=='Cyclist'):\n",
     "                    totalCyclist=totalCyclist+1\n",
     "                    if(readFile.isOccluded[k]==1):\n",
     "                        occCyclist=occCyclist+1\n",
-    "                if(readFile.label[k]=='Animal'):\n",
+    "                elif(readFile.label[k]=='Animal'):\n",
     "                    totalAnimal=totalAnimal+1\n",
     "                    if(readFile.isOccluded[k]==1):\n",
     "                        occAnimal=occAnimal+1\n",
-    "                if(not(readFile.label[k] in allClasses)):\n",
-    "                    allClasses.append(readFile.label[k])\n",
-    "                if(readFile.label[k]=='Pedestrian Crossing'):\n",
+    "                elif(readFile.label[k]=='Pedestrian Crossing'):\n",
     "                    irrcount=irrcount+1\n",
     "                    ijkPedCross.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
     "                elif(readFile.label[k]=='No Parking'):\n",
@@ -403,10 +405,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pedsWidth)\n",
+    "pedWnp=np.asarray(pedsWidth)\n",
+    "print(np.sum(pedWnp))"
+   ]
   },
   {
    "cell_type": "code",
