Before unification of code

--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing the libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +18,13 @@
     "import matplotlib\n",
     "import os\n",
     "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The base path of the folder where the data is stored."
    ]
   },
   {
@@ -23,8 +37,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`totalFrames` stores the total number of the frames that we have for processing\n",
+    "\n",
+    "`totalID` Stores the total number of distinct objects we have for processing\n",
+    "\n",
+    "`videoNo` Stores the total number of annotated sequences or videos we have"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -51,45 +76,42 @@
     }
    ],
    "source": [
-    "totalFrames=0\n",
-    "totalID=0\n",
-    "videoNo=0\n",
+    "\n",
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
     "        try:\n",
-    "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"\n",
-    "            #print(fullPath)\n",
-    "            readFile=pd.read_csv(fullPath)\n",
-    "            totalFrames=totalFrames + max(readFile.frameNumber)\n",
+    "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\" #j loop represents the name of the video folder and the video we are trying to extract\n",
+    "            readFile=pd.read_csv(fullPath) #The csv files are read one by one.\n",
+    "            totalFrames=totalFrames + max(readFile.frameNumber)#total frames added\n",
     "            ids=readFile.id\n",
     "            idSet=set(ids)\n",
-    "            totalID=totalID+len(idSet)\n",
-    "            videoNo=videoNo+1\n",
+    "            totalID=totalID+len(idSet)#total number of dstinct ids or total number of objects present in all the videos\n",
+    "            videoNo=videoNo+1#total number of videos\n",
     "        except:\n",
-    "            videoNo=videoNo-1\n",
+    "            videoNo=videoNo-1#unfound videos are unadded from the total video number\n",
     "            print(\"file not found\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47809\n",
-      "2257\n",
-      "80\n"
+      "Total number of frames 47809\n",
+      "Total number of distinct ids or total number of distinct objects 2257\n",
+      "Total sequences or videos 80\n"
      ]
     }
    ],
    "source": [
-    "print(totalFrames)\n",
-    "print(totalID)\n",
-    "print(videoNo)"
+    "print(\"Total number of frames\",totalFrames)\n",
+    "print(\"Total number of distinct ids or total number of distinct objects\",totalID)\n",
+    "print(\"Total sequences or videos\",videoNo)"
    ]
   },
   {
@@ -237,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +331,10 @@
     }
    ],
    "source": [
+    "totalFrames=0\n",
+    "totalID=0\n",
+    "videoNo=0\n",
+    "\n",
     "totalbbox=0\n",
     "totalPeds=0\n",
     "occPeds=0\n",
@@ -336,6 +362,7 @@
     "pedWidth=[]\n",
     "pedHeight=[]\n",
     "uniqPeds=0\n",
+    "#i represents the outer folders representing different persons' video folders\n",
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
@@ -344,6 +371,11 @@
     "            readFile=pd.read_csv(fullPath)\n",
     "            totalbbox=totalbbox+len(readFile)\n",
     "            pedsIDuniq=[]\n",
+    "            totalFrames=totalFrames + max(readFile.frameNumber)#total frames added\n",
+    "            ids=readFile.id\n",
+    "            idSet=set(ids)\n",
+    "            totalID=totalID+len(idSet)#total number of dstinct ids or total number of objects present in all the videos\n",
+    "            videoNo=videoNo+1#total number of videos\n",
     "            for k in range(len(readFile)):\n",
     "                if(not(readFile.label[k] in allClasses)):\n",
     "                    allClasses.append(readFile.label[k])\n",
@@ -400,38 +432,22 @@
     "                    irrcount=irrcount+1\n",
     "                    ijkU.append(str(i)+\"-\"+str(j)+\"-\"+str(k))\n",
     "        except:\n",
-    "             print(\"file not found\",i,j)\n"
+    "            print(\"file not found\",i,j)\n",
+    "            videoNo=videoNo-1#unfound videos are unadded from the total video number\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pedsWidth)\n",
-    "pedWnp=np.asarray(pedsWidth)\n",
-    "print(np.sum(pedWnp))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Total number of frames 47809\n",
+      "Total number of distinct ids or total number of distinct objects 2257\n",
+      "Total sequences or videos 80\n",
       "Total Number of pedestrians 18214\n",
       "occluded pedestrians 2356\n",
       "number of unique pedestrians 330\n",
@@ -452,6 +468,8 @@
       "totalbbox 221105\n",
       "Total number of bounding boxes for the 8 class objects 221105\n",
       "All the classes of data that are present ['Car', 'Two-Wheeler', 'Pedestrian', 'Auto-Rickshaw', 'Truck', 'Cyclist', 'Bus', 'Animal', 'Pedestrian Crossing', 'No Parking', 'No Stopping', 'Right Turn', 'U-Turn']\n",
+      "average pedestrian width 29.3364444932\n",
+      "average pedestrian Height 79.8383111892\n",
       "245\n",
       "['5-7-2193', '5-7-2196', '5-7-2200', '5-7-2204', '5-7-2208', '5-7-2211', '5-7-2215', '5-7-2219', '5-7-2223', '5-7-2227', '5-7-2231', '5-7-2235', '5-7-2239', '5-7-2243', '5-7-2247', '5-7-2251', '5-7-2255', '5-7-2259', '5-7-2263', '5-7-2267', '5-7-2271', '5-7-2275', '5-7-2279', '5-7-2283', '5-7-2287', '5-7-2292', '5-7-2296', '5-7-2300', '5-7-2303', '5-7-2307', '5-7-2311', '5-7-2315', '5-7-2321', '5-7-2326', '5-7-2330', '5-7-2336', '5-7-2340', '5-7-2345', '5-7-2350', '5-7-2355', '5-7-2361', '5-7-2365', '5-7-2371', '5-7-2376', '5-7-2380', '5-7-2387', '5-7-2392', '5-7-2395', '5-7-2402', '5-7-2405', '8-7-2073', '8-7-2078', '8-7-2083', '8-7-2088', '8-7-2093', '8-7-2099', '8-7-2105', '8-7-2110', '8-7-2115', '8-7-2118', '8-7-2125']\n",
       "['6-7-449', '6-7-454', '6-7-459', '6-7-464', '6-7-469', '6-7-474', '6-7-479', '6-7-484', '6-7-489', '6-7-494', '6-7-499', '6-7-504', '6-7-509', '6-7-514', '6-7-519', '6-7-524', '6-7-529', '6-7-534', '6-7-539', '6-7-544', '6-7-549', '6-7-554', '6-7-559', '6-7-564']\n",
@@ -462,6 +480,9 @@
     }
    ],
    "source": [
+    "print(\"Total number of frames\",totalFrames)\n",
+    "print(\"Total number of distinct ids or total number of distinct objects\",totalID)\n",
+    "print(\"Total sequences or videos\",videoNo)\n",
     "print(\"Total Number of pedestrians\", totalPeds )\n",
     "print(\"occluded pedestrians\",occPeds)\n",
     "print(\"number of unique pedestrians\",uniqPeds)\n",
@@ -482,6 +503,12 @@
     "print(\"totalbbox\", totalPeds+totalCar+totalBus+totalTruck+totalCyclist+totalTwo+totalAuto+totalAnimal)\n",
     "print(\"Total number of bounding boxes for the 8 class objects\", totalbbox-irrcount)\n",
     "print(\"All the classes of data that are present\",allClasses)\n",
+    "pedWnp=np.asarray(pedWidth)\n",
+    "avgPedWidth=np.sum(pedWnp)/totalPeds\n",
+    "pedHnp=np.asarray(pedHeight)\n",
+    "avgPedHeight=np.sum(pedHnp)/totalPeds\n",
+    "print(\"average pedestrian width\",avgPedWidth)\n",
+    "print(\"average pedestrian Height\",avgPedHeight)\n",
     "print(irrcount)\n",
     "print(ijkPedCross)\n",
     "print(ijkPark)\n",
@@ -504,17 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "pedWidth=[]\n",
+    "pedHeight=[]\n",
+    "for k in range(len(readFile)):\n",
+    "    pedWidth.append(readFile.x_BR[k]-readFile.x_TL[k])\n",
+    "    pedHeight.append(abs(readFile.y_BR[k]-readFile.y_TL[k]))\n",
+    "print(pedHeight)"
+   ]
   }
  ],
  "metadata": {
