Unification of code

--- a/indian dataset.ipynb
+++ b/indian dataset.ipynb
@@ -40,84 +40,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`totalFrames` stores the total number of the frames that we have for processing\n",
-    "\n",
-    "`totalID` Stores the total number of distinct objects we have for processing\n",
-    "\n",
-    "`videoNo` Stores the total number of annotated sequences or videos we have"
+    "### Example DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n",
-      "file not found\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "for i in range(1,17):\n",
-    "    inpath=path+\"/\"+str(i)\n",
-    "    for j in range(1,8):\n",
-    "        try:\n",
-    "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\" #j loop represents the name of the video folder and the video we are trying to extract\n",
-    "            readFile=pd.read_csv(fullPath) #The csv files are read one by one.\n",
-    "            totalFrames=totalFrames + max(readFile.frameNumber)#total frames added\n",
-    "            ids=readFile.id\n",
-    "            idSet=set(ids)\n",
-    "            totalID=totalID+len(idSet)#total number of dstinct ids or total number of objects present in all the videos\n",
-    "            videoNo=videoNo+1#total number of videos\n",
-    "        except:\n",
-    "            videoNo=videoNo-1#unfound videos are unadded from the total video number\n",
-    "            print(\"file not found\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of frames 47809\n",
-      "Total number of distinct ids or total number of distinct objects 2257\n",
-      "Total sequences or videos 80\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Total number of frames\",totalFrames)\n",
-    "print(\"Total number of distinct ids or total number of distinct objects\",totalID)\n",
-    "print(\"Total sequences or videos\",videoNo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -254,14 +185,32 @@
     }
    ],
    "source": [
+    "pd.read_csv(path+\"/\"+str(i)+\"/2/002.csv\")\n",
     "print(readFile)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### A Survey of ID list and Label list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 11, 13, 15]\n",
+      "12\n",
+      "['Bus', 'Two-Wheeler', 'Auto-Rickshaw', 'Two-Wheeler', 'Car', 'Car', 'Car', 'Two-Wheeler', 'Two-Wheeler', 'Auto-Rickshaw', 'Pedestrian', 'Two-Wheeler']\n"
+     ]
+    }
+   ],
    "source": [
     "labels=readFile.label\n",
     "ids=readFile.id\n",
@@ -273,25 +222,9 @@
     "        continue\n",
     "    else:\n",
     "        idList.append(ids[i])\n",
-    "        labelList.append(labels[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 11, 13, 15]\n",
-      "['Bus', 'Two-Wheeler', 'Auto-Rickshaw', 'Two-Wheeler', 'Car', 'Car', 'Car', 'Two-Wheeler', 'Two-Wheeler', 'Auto-Rickshaw', 'Pedestrian', 'Two-Wheeler']\n"
-     ]
-    }
-   ],
-   "source": [
+    "        labelList.append(labels[i])\n",
     "print(idList)\n",
+    "print(len(idList))\n",
     "print(labelList)"
    ]
   },
@@ -299,7 +232,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Total Number of bounding boxes for each class and total along with occlusion information"
+    "# Benchmarking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`totalFrames` stores the total number of the frames that we have for processing\n",
+    "\n",
+    "`totalID` Stores the total number of distinct objects we have for processing\n",
+    "\n",
+    "`videoNo` Stores the total number of annotated sequences or videos we have"
    ]
   },
   {
@@ -367,7 +311,7 @@
     "    inpath=path+\"/\"+str(i)\n",
     "    for j in range(1,8):\n",
     "        try:\n",
-    "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"\n",
+    "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"#j loop represents the name of the video folder and the video we are trying to extract\n",
     "            readFile=pd.read_csv(fullPath)\n",
     "            totalbbox=totalbbox+len(readFile)\n",
     "            pedsIDuniq=[]\n",
@@ -522,12 +466,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ids=readFile.id\n",
-    "idSet=set(ids)\n",
-    "print(idSet)\n",
-    "print(len(idSet))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
