--- a/Conversion of Data to 2DMOT2015.ipynb
+++ b/Conversion of Data to 2DMOT2015.ipynb
@@ -39,12 +39,13 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import os\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +54,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Not Found 1 1\n",
+      "File Not Found 1 2\n",
+      "File Not Found 1 3\n",
+      "File Not Found 1 4\n",
+      "File Not Found 1 5\n",
+      "File Not Found 1 6\n",
+      "File Not Found 1 7\n",
+      "File Not Found 2 1\n",
+      "File Not Found 2 2\n",
+      "File Not Found 2 3\n",
+      "File Not Found 2 4\n",
+      "File Not Found 2 5\n",
+      "File Not Found 2 6\n",
+      "File Not Found 2 7\n",
+      "File Not Found 3 1\n",
+      "File Not Found 3 2\n",
+      "File Not Found 3 3\n",
+      "File Not Found 3 4\n",
+      "File Not Found 3 5\n",
+      "File Not Found 3 6\n",
+      "File Not Found 3 7\n",
+      "File Not Found 4 1\n",
+      "File Not Found 4 2\n",
+      "File Not Found 4 3\n",
+      "File Not Found 4 4\n",
+      "File Not Found 4 5\n",
+      "File Not Found 4 6\n",
+      "File Not Found 4 7\n",
+      "File Not Found 5 1\n",
+      "File Not Found 5 2\n",
+      "File Not Found 5 3\n",
+      "File Not Found 5 4\n",
+      "File Not Found 5 5\n",
+      "File Not Found 5 6\n",
+      "File Not Found 5 7\n",
+      "File Not Found 6 1\n",
+      "File Not Found 6 2\n",
+      "File Not Found 6 3\n",
+      "File Not Found 6 4\n",
+      "File Not Found 6 5\n",
+      "File Not Found 6 6\n",
+      "File Not Found 6 7\n",
+      "File Not Found 7 1\n",
+      "File Not Found 7 2\n",
+      "File Not Found 7 3\n",
+      "File Not Found 7 4\n",
+      "File Not Found 7 5\n",
+      "File Not Found 7 6\n",
+      "File Not Found 7 7\n",
+      "File Not Found 8 1\n",
+      "File Not Found 8 2\n",
+      "File Not Found 8 3\n",
+      "File Not Found 8 4\n",
+      "File Not Found 8 5\n",
+      "File Not Found 8 6\n",
+      "File Not Found 8 7\n",
+      "File Not Found 9 1\n",
+      "File Not Found 9 2\n",
+      "File Not Found 9 3\n",
+      "File Not Found 9 4\n",
+      "File Not Found 9 5\n",
+      "File Not Found 9 6\n",
+      "File Not Found 9 7\n",
+      "File Not Found 10 1\n",
+      "File Not Found 10 2\n",
+      "File Not Found 10 3\n",
+      "File Not Found 10 4\n",
+      "File Not Found 10 5\n",
+      "File Not Found 10 6\n",
+      "File Not Found 10 7\n",
+      "File Not Found 11 1\n",
+      "File Not Found 11 2\n",
+      "File Not Found 11 3\n",
+      "File Not Found 11 4\n",
+      "File Not Found 11 5\n",
+      "File Not Found 11 6\n",
+      "File Not Found 11 7\n",
+      "File Not Found 12 1\n",
+      "File Not Found 12 2\n",
+      "File Not Found 12 3\n",
+      "File Not Found 12 4\n",
+      "File Not Found 12 5\n",
+      "File Not Found 12 6\n",
+      "File Not Found 12 7\n",
+      "File Not Found 13 1\n",
+      "File Not Found 13 2\n",
+      "File Not Found 13 3\n",
+      "File Not Found 13 4\n",
+      "File Not Found 13 5\n",
+      "File Not Found 13 6\n",
+      "File Not Found 13 7\n",
+      "File Not Found 14 1\n",
+      "File Not Found 14 2\n",
+      "File Not Found 14 3\n",
+      "File Not Found 14 4\n",
+      "File Not Found 14 5\n",
+      "File Not Found 14 6\n",
+      "File Not Found 14 7\n",
+      "File Not Found 15 1\n",
+      "File Not Found 15 2\n",
+      "File Not Found 15 3\n",
+      "File Not Found 15 4\n",
+      "File Not Found 15 5\n",
+      "File Not Found 15 6\n",
+      "File Not Found 15 7\n",
+      "File Not Found 16 1\n",
+      "File Not Found 16 2\n",
+      "File Not Found 16 3\n",
+      "File Not Found 16 4\n",
+      "File Not Found 16 5\n",
+      "File Not Found 16 6\n",
+      "File Not Found 16 7\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
@@ -63,7 +183,50 @@
     "        try:\n",
     "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"#j loop represents the name of the video folder and the video we are trying to extract\n",
     "            readFile=pd.read_csv(fullPath)\n",
-    "            readFile\n"
+    "            with open(inpath+\"/\"+str(j)+\"/MOT\"+str(j)+\".csv\",\"wb\") as result:\n",
+    "                wrtFile= csv.writer(result)\n",
+    "            for row in readFile:\n",
+    "                wtrFile.writerow( (row['frameNumber'], row['id'], row[\"x_TL\"], row[y_TL]), row[x_BR]-row[x_TL],row[y_BR]-row[y_TL] )\n",
+    "        except:\n",
+    "            print(\"File Not Found\",i,j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "writerow() takes exactly one argument (4 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-fef7649f38cf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mwrtFile\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreadFile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mwrtFile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: writerow() takes exactly one argument (4 given)"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "readFile=pd.read_csv(path+\"/1/2/002.csv\")\n",
+    "with open(inpath+\"/2/MOT2.csv\",\"wb\") as result:\n",
+    "    wrtFile= csv.writer(result)\n",
+    "    for row in readFile:\n",
+    "        wrtFile.writerow(row[0], row[1], row[2], row[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "readFile=pd.read_csv(path+\"/1/2/002.csv\")\n",
+    "frameNumber=readFile['frameNumber']\n",
+    "df = pd.DataFrame(data={\"col1\":frameNumber})\n",
+    "df.to_csv(inpath+\"/2/MOT2.csv\", sep=',',index=False)"
    ]
   },
   {
@@ -71,7 +234,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"source\",\"rb\") as source:\n",
+    "    rdr= csv.reader( source )\n",
+    "    with open(\"result\",\"wb\") as result:\n",
+    "        wtr= csv.writer( result )\n",
+    "        for r in rdr:\n",
+    "            wtr.writerow( (r[0], r[1], r[3], r[4]) )"
+   ]
   }
  ],
  "metadata": {
