--- a/Conversion of Data to 2DMOT2015.ipynb
+++ b/Conversion of Data to 2DMOT2015.ipynb
@@ -219,6 +219,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        95\n",
+      "1        45\n",
+      "2        35\n",
+      "3        29\n",
+      "4        32\n",
+      "5        97\n",
+      "6        45\n",
+      "7        37\n",
+      "8        30\n",
+      "9        33\n",
+      "10      100\n",
+      "11       45\n",
+      "12       38\n",
+      "13       31\n",
+      "14       34\n",
+      "15      102\n",
+      "16       45\n",
+      "17       40\n",
+      "18       31\n",
+      "19       34\n",
+      "20      105\n",
+      "21       45\n",
+      "22       42\n",
+      "23       32\n",
+      "24       35\n",
+      "25      108\n",
+      "26       44\n",
+      "27       33\n",
+      "28       35\n",
+      "29      110\n",
+      "       ... \n",
+      "1419     32\n",
+      "1420     31\n",
+      "1421     46\n",
+      "1422     54\n",
+      "1423     32\n",
+      "1424     31\n",
+      "1425     46\n",
+      "1426     55\n",
+      "1427     33\n",
+      "1428     31\n",
+      "1429     46\n",
+      "1430     55\n",
+      "1431     33\n",
+      "1432     31\n",
+      "1433     46\n",
+      "1434     56\n",
+      "1435     33\n",
+      "1436     31\n",
+      "1437     46\n",
+      "1438     56\n",
+      "1439     33\n",
+      "1440     31\n",
+      "1441     46\n",
+      "1442     57\n",
+      "1443     33\n",
+      "1444     31\n",
+      "1445     46\n",
+      "1446     58\n",
+      "1447     33\n",
+      "1448     32\n",
+      "Name: y_BR, Length: 1449, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  import sys\n",
+      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=pd.read_csv(path+\"/1/2/hi.csv\")\n",
+    "keep_col = ['frameNumber','id','x_TL','y_TL','x_BR','y_BR', 'isOccluded']\n",
+    "new_f = f[keep_col]\n",
+    "# new_f.to_csv(\"newFile.csv\", index=False)\n",
+    "#print(new_f['x_BR'])\n",
+    "#print(new_f['x_TL'])\n",
+    "new_f['x_BR']=new_f['x_BR']-new_f['x_TL']\n",
+    "#print(new_f['x_BR'])\n",
+    "new_f['y_BR']=abs(new_f['y_TL']-new_f['y_BR'])\n",
+    "print(new_f['y_BR'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -227,6 +336,29 @@
     "frameNumber=readFile['frameNumber']\n",
     "df = pd.DataFrame(data={\"col1\":frameNumber})\n",
     "df.to_csv(inpath+\"/2/MOT2.csv\", sep=',',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[Errno 13] Permission denied: 'C:/Users/asd/Desktop/500Frames/1/2/002.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-b24bd483c8f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/1/2/002.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mwr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquoting\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mQUOTE_ALL\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mwr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframeNumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'C:/Users/asd/Desktop/500Frames/1/2/002.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "with open(path+\"/1/2/002.csv\", 'w') as myfile:\n",
+    "    wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
+    "    wr.writerow(frameNumber)"
    ]
   },
   {
